# fuck_turnitin

./: AGENTS.md  README.md  pyproject.toml
src/fuck_turnitin/: __init__.py
